# Elegant_FAST_LIO

./: CMakeLists.txt
config/: hesai128.yaml  velodyne.yaml
launch/: mapping_avia.launch  mapping_hesai128.launch  mapping_horizon.launch  mapping_mid360.launch  mapping_ouster64.launch  mapping_velodyne.launch
rviz_cfg/: loam_livox.rviz
src/: fast_lio.cpp  fast_lio.h  laser_mapping.cpp  lidar_preprocess.cpp  lidar_preprocess.h  msg_conversion.h  run_fast_lio_node_main.cpp
src/IKFoM_toolkit/: use_ikfom.hpp
src/IKFoM_toolkit/esekfom/: esekfom.hpp
src/IKFoM_toolkit/mtk/types/: vect.hpp
src/common/: common_lib.h  options.cpp  options.h  sensor_lidar_type.h  sensor_type.h  utils.h
src/core/: imu_process.cpp  imu_process.h
src/ikd-Tree/: ikd_Tree.cpp  ikd_Tree_impl.h
src/io/: yaml_io.cpp  yaml_io.h
src/math/: Exp_mat.h  so3_math.h
